--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 10000;
 }
 header .logo
 {
@@ -61,6 +62,9 @@ section
     width: 100%;
     height: 100vh;
     padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 section img
 {
@@ -70,4 +74,12 @@ section img
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+#text
+{
+    position: absolute;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 8.5vw;
+    z-index: 9;
 }
