--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body
 }
 header
 {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -68,18 +68,31 @@ section
 }
 section img
 {
-    position: absolute;
+    position:absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 200%;
     object-fit: cover;
 }
+section img#wbback
+{
+    z-index: 1;
+}
+section img#wbfront
+{
+    z-index: 3;
+}
+section img#wbwater
+{
+    z-index: 4;
+}
+
 #text
 {
-    position: absolute;
+    position: fixed;
     color: #fff;
     white-space: nowrap;
     font-size: 8.5vw;
-    z-index: 9;
+    z-index: 2;
 }
