--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section img
     top: 0;
     left: 0;
     width: 100%;
-    height: 200%;
+    height: 300%;
     object-fit: cover;
 }
 section img#wbback
@@ -91,6 +91,7 @@ section img#wbwater
 #text
 {
     position: fixed;
+    top: 200px;
     color: #fff;
     white-space: nowrap;
     font-size: 8.5vw;
