--- a/style.css
+++ b/style.css
@@ -6,11 +6,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body
-{
-    min-height: 100vh;
-    background: linear-gradient(#5d08a3,#3c63b8);
-}
+
 header
 {
     position: fixed;
@@ -72,8 +68,9 @@ section img
     top: 0;
     left: 0;
     width: 100%;
-    height: 300%;
+    height: auto;
     object-fit: cover;
+    
 }
 section img#wbback
 {
@@ -82,18 +79,41 @@ section img#wbback
 section img#wbfront
 {
     z-index: 3;
+    
 }
 section img#wbwater
 {
     z-index: 4;
 }
 
-#text
+img#avatar
+{
+    border-radius: 50%;
+    z-index: 6;
+    
+}
+
+.text
 {
     position: fixed;
-    top: 200px;
+    top: 100px;
     color: #fff;
     white-space: nowrap;
     font-size: 8.5vw;
     z-index: 2;
+    opacity: 1;
+}
+
+.column
+{
+    float: left;
+    z-index: 5;
+}
+
+.column.side {
+    width: 25%;
+}
+
+.column.middle {
+    width: 50%;
 }
