--- a/projectstyle.css
+++ b/projectstyle.css
@@ -43,7 +43,7 @@ header ul li a
 {
     text-decoration: none;
     padding: 6px 15px;
-    color: #0071bf;
+    color: #00aee7;
     border-radius: 20px;
 }
 
@@ -51,12 +51,12 @@ header ul li a:hover,
 header ul li a.active
 {
     background: #2b2b2b;
-    color:#0071bf;
+    color:#00aee7;
 }
 
 .strokeblack
 {
-    color: #0071bf;
+    color: #00aee7;
     -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: #2b2b2b;
 }
@@ -65,7 +65,7 @@ header ul li a.active
 {
     color: #2b2b2b;
     -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: #0071bf;
+    -webkit-text-stroke-color: #00aee7;
 }
 
 section
@@ -102,14 +102,6 @@ section img#wbwater
     z-index: 4;
 }
 
-img#avatar
-{
-    position: relative;
-    border-radius: 50%;
-    z-index: 6;
-    left: 125px;
-    top: -100px;
-}
 
 .text
 {
@@ -122,27 +114,6 @@ img#avatar
     opacity: 1;
 }
 
-.name
-{
-    color:#fff;
-    white-space: nowrap;
-    font-size: 2.5vw;
-    z-index: 7;
-    position: relative;
-    left: 60px;
-    top: -100px;
-}
-
-.infotext
-{
-    color: #fff;
-    white-space: nowrap;
-    font-size: 0.7vw;
-    z-index: 7;
-    position: relative;
-    top: 0px;
-    left: -480px;
-}
 
 .projects
 {
@@ -170,22 +141,122 @@ img#avatar
     left: 580px;
 }
 
-.cvimg
-{
-    position: relative;
-    left: -400px;
-}
-
-.japainvimg
-{
-    position: relative;
-    left: -125px;
-}
-
 .standard
 {
     color: #fff;
     position: relative;
     left: -350px;
+    text-align: center;
+}
+
+.column
+{
+    float: right;
+    width: 50%;
+}
+
+.row::after
+{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.container{
+    width: 1000px;
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+}
+
+.container .card{
+    position: relative;
+    cursor: pointer;
+}
+
+.container .card .face{
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+}
+
+.container .card .face.face1{
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.container .card:hover .face.face1{
+    background: #00aee7;
+    transform: translateY(0);
+}
+
+.container .card .face.face1 .content{
+    opacity: 0.7;
+    transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content{
+    opacity: 1;
+}
+
+.container .card .face.face1 .content img{
+    max-width: 100px;
+}
+
+.container .card .face.face1 .content h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.container .card .face.face2{
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2{
+    transform: translateY(0);
+}
+
+.container .card .face.face2 .content p{
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face2 .content a{
+    margin: 15px 0 0;
+    display:  inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    padding: 5px;
+    border: 1px solid #333;
+}
+
+.container .card .face.face2 .content a:hover{
+    background: #333;
+    color: #fff;
+}
+
+.workflow
+{
+    color:#fff;
+    white-space: nowrap;
+    font-size: 2.5vw;
+    z-index: 7;
     text-align: center;
 }
