--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -72,7 +72,7 @@ section
 {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 750px;
     padding: 100px;
     display: flex;
     justify-content: center;
@@ -284,9 +284,11 @@ img#avatar
 
 .workflow
 {
-    color:#fff;
     white-space: nowrap;
     font-size: 2.5vw;
     z-index: 7;
     text-align: center;
+    color: #e6b101;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #2b2b2b;
 }
