--- a/indexstyle.css
+++ b/indexstyle.css
@@ -73,7 +73,7 @@ section
 {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 750px;
     padding: 100px;
     display: flex;
     justify-content: center;
