--- a/projectstyle.css
+++ b/projectstyle.css
@@ -72,7 +72,7 @@ section
 {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 750px;
     padding: 100px;
     display: flex;
     justify-content: center;
@@ -162,6 +162,23 @@ section img#wbwater
     clear: both;
 }
 
+.col2
+{
+    float: left;
+    width: 33.3%;
+}
+
+.row2::after
+{
+    content: "";
+    display: table;
+    clear: both;
+}
+.columntext
+{
+    color: #fff;
+}
+
 @property --rotate {
     syntax: "<angle>";
     initial-value: 132deg;
@@ -242,3 +259,4 @@ section img#wbwater
       --rotate: 360deg;
     }
   }
+
